--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
     </script>
-    <script src="http://www.google-analytics.com/analytics.js" async></script>
-    <script async src="js/perfmatters.js" async></script>
+    <script async src="http://www.google-analytics.com/analytics.js"></script>
+    <script async src="js/perfmatters.js"></script>
   </head>
 
   <body>
